# str2hex

./: .gitignore  LICENSE  README.md  stack.yaml  str2hex.cabal
app/: Main.hs
src/Text/: StrToHex.hs
