name:                str2hex
version:             0.0.0.0
synopsis:            Translate text to hex, and show it.
description:         Please see README.md
homepage:            http://github.com/siphilia/str2hex#readme
license:             BSD3
license-file:        LICENSE
author:              siphilia <siphilia.rn@gmail.com>
maintainer:          siphilia <siphilia.rn@gmail.com>
copyright:           (c) 2015 siphilia <siphilia.rn@gmail.com>
category:            Text
build-type:          Simple
-- extra-source-files:
cabal-version:       >= 1.10

library
  hs-source-dirs:      src
  exposed-modules:     Text.StrToHex
  build-depends:       base >= 4.7 && < 5
                     , bytestring >= 0.10
                     , text >= 1.0
  default-language:    Haskell2010

executable str2hex
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
                     , str2hex
                     , shakespeare >= 2.0
                     , text
  default-language:    Haskell2010

test-suite str2hex-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , str2hex
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/siphilia/str2hex

